# marian-edge

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  deny.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container-cpu.yml  release-macos.yml
benchmarks/: corpus-v1.jsonl
benchmarks/results/: beam-width-reference-m1pro.json  v0.6.0-m1.json
crates/marian-bergamot/: Cargo.toml
crates/marian-bergamot/native/: CMakeLists.txt  worker.cpp
crates/marian-bergamot/src/: lib.rs
crates/marian-core/: Cargo.toml
crates/marian-core/src/: backend.rs  lib.rs  scheduler.rs  segmenter.rs  types.rs
crates/marian-cpu/: Cargo.toml
crates/marian-cpu/benches/: hotspots.rs
crates/marian-cpu/src/: backend.rs  benchmarking.rs  engine.rs  legacy_q8.rs  lib.rs  limits.rs  q8_arm.rs  q8_avx2.rs  q8_engine.rs  q8_error.rs  q8_gemm.rs  tensor.rs
crates/marian-cpu/src/q8_engine/: worker_packed.rs
crates/marian-cpu/tests/: golden.rs  q8_fp32_artifact.rs  q8_golden.rs  segmenter.rs
crates/marian-metal/: Cargo.toml
crates/marian-metal/src/: config.rs  engine.rs  lib.rs  tuning.rs
crates/marian-metal/src/engine/: model.rs
crates/marian-metal/tests/: cpu_metal_differential.rs  golden.rs
crates/marian-mlx/: Cargo.toml  build.rs
crates/marian-mlx/metal/: kernels.metal
crates/marian-mlx/native/: engine.cpp
crates/marian-mlx/native/include/: engine.hpp
crates/marian-mlx/src/: backend.rs  config.rs  engine.rs  ffi.rs  lib.rs  manifest.rs  metal_runtime.rs  tuning.rs  workspace.rs
crates/marian-mlx/src/engine/: decode.rs  model.rs  ops.rs
crates/marian-mlx/tests/: cpu_metal_differential.rs  golden.rs
crates/marian-model/: Cargo.toml
crates/marian-model/src/: lib.rs  manifest.rs  position.rs  shortlist.rs
crates/marian-server/: Cargo.toml  build.rs
crates/marian-server/src/: lib.rs  main.rs
crates/marian-tokenizer/: Cargo.toml
crates/marian-tokenizer/src/: lib.rs
crates/marian-tokenizer/tests/: mozilla_enzh.rs
crates/marian-worker-wasm/: Cargo.toml
crates/marian-worker-wasm/src/: lib.rs
docker/: entrypoint.sh  prepare-model.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  IMMERSIVE_TRANSLATE.md  OPERATIONS.md  OPTIMIZATION_ROADMAP.md
packaging/launchd/: io.github.malusama.marian-edge.plist  io.github.malusama.marian-mlx.plist
packaging/models/: enzh-q8-manifest.json
scripts/: build-mlx.sh  build-release.sh  fetch-mlx-deps.sh  install-macos.sh  marian-edgectl  marian-mlxctl  package-macos.sh  prepare-enzh-model.sh  uninstall-macos.sh
tools/: bench_http.py  check_docs.py  convert_marian.py  generate_corpus.py  profile_metal.sh  summarize_metal_trace.py  test_summarize_metal_trace.py
worker/: README.md  package.json  wrangler.jsonc
worker/scripts/: bench-http.mjs  bench-wasm.mjs  pack-model.mjs  smoke.mjs
worker/src/: index.js
