[workspace]
members = [
    "crates/marian-bergamot",
    "crates/marian-core",
    "crates/marian-mlx",
    "crates/marian-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/malusama/marian-mlx"
homepage = "https://github.com/malusama/marian-mlx"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
flume = "0.12.0"
marian-bergamot = { path = "crates/marian-bergamot" }
marian-core = { path = "crates/marian-core" }
marian-mlx = { path = "crates/marian-mlx" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "cors", "limit", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
