[workspace]
members = [
    "crates/marian-core",
    "crates/marian-cpu",
    "crates/marian-model",
    "crates/marian-mlx",
    "crates/marian-server",
    "crates/marian-tokenizer",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/malusama/marian-mlx"
homepage = "https://github.com/malusama/marian-mlx"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
futures-util = "0.3.32"
half = "2.7.1"
marian-core = { version = "0.5.0", path = "crates/marian-core" }
marian-cpu = { version = "0.5.0", path = "crates/marian-cpu" }
marian-model = { version = "0.5.0", path = "crates/marian-model" }
marian-mlx = { version = "0.5.0", path = "crates/marian-mlx" }
marian-tokenizer = { version = "0.5.0", path = "crates/marian-tokenizer" }
matrixmultiply = { version = "0.3.10", features = ["threading"] }
memmap2 = "0.9.9"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSError",
    "NSString",
] }
objc2-metal = { version = "0.3.2", default-features = false, features = [
    "std",
    "MTLAllocation",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLPipeline",
    "MTLResource",
    "MTLTypes",
] }
objc2-metal-performance-shaders = { version = "0.3.2", default-features = false, features = [
    "MPSCore",
    "MPSCoreTypes",
    "MPSKernel",
    "MPSMatrix",
    "MPSMatrixMultiplication",
] }
rten-gemm = "=0.21.0"
rten-tensor = "=0.21.0"
rayon = "=1.12.0"
safetensors = "0.8.0"
sentencepiece-rust = "=0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "cors", "limit", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
