[package]
name = "marian-cpu"
description = "Pure Rust FP32 and Q8 CPU backends for Marian Transformer-SSRU models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
benchmarks = []

[[bench]]
name = "hotspots"
harness = false
required-features = ["benchmarks"]

[dependencies]
marian-core.workspace = true
marian-model.workspace = true
marian-tokenizer.workspace = true
matrixmultiply.workspace = true
memmap2.workspace = true
rten-gemm.workspace = true
rten-tensor.workspace = true
safetensors.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
