[package]
name = "marian-metal"
description = "Apple Silicon direct Metal backend for Marian translation models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[test]]
name = "cpu_metal_differential"
path = "tests/cpu_metal_differential.rs"
required-features = ["metal"]

[features]
default = []
metal = [
    "dep:marian-tokenizer",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-metal",
    "dep:objc2-metal-performance-shaders",
    "dep:safetensors",
]
# Compatibility for source builds which still pass `--features mlx`. This no
# longer links MLX or compiles C++; it selects the direct Metal backend.
mlx = ["metal"]

[dependencies]
half.workspace = true
marian-core.workspace = true
marian-model.workspace = true
marian-tokenizer = { workspace = true, optional = true }
memmap2.workspace = true
safetensors = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-metal-performance-shaders = { workspace = true, optional = true }

[dev-dependencies]
marian-cpu.workspace = true
