[package]
name = "marian-model"
description = "Shared Marian model manifest and lexical shortlist support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
marian-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
