[package]
name = "marian-server"
description = "High-throughput local HTTP service for Marian translation models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[[bin]]
name = "marian-mlx-server"
path = "src/main.rs"

[features]
default = []
mlx = ["marian-mlx/mlx"]
bergamot = ["dep:marian-bergamot"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
marian-bergamot = { workspace = true, optional = true }
marian-core.workspace = true
marian-mlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
