[package]
name = "marian-tokenizer"
description = "Pure Rust SentencePiece inference for Marian translation models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sentencepiece-rust.workspace = true
thiserror.workspace = true
